[tool.poetry]
name = "pyxcel"
version = "0.1.0"
description = "Analytics workflow without excel"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyperclip = "^1.8.0"
pandas = "^1.0.3"
jupyterlab = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
